--- a/project1.html
+++ b/project1.html
@@ -26,7 +26,51 @@ public class ClassA {
 
 		}
 
-	  
+	   public void method4() {
+
+		    System.out.println("tamilnadu");
+
+			}
+
+
+
+
+
+		  public void method5() {
+
+		    System.out.println("karnataka");
+
+			}
+
+
+
+		  public void method6() {
+
+		    System.out.println("andhra");
+
+			}
+public void method7() {
+
+			    System.out.println("canada");
+
+				}
+
+
+
+	           public void method8() {
+
+			    System.out.println("france");
+
+				}
+
+
+
+			  public void method9() {
+
+			    System.out.println("russia");
+
+				}
+
 
 	 
 
